[tiger] order check
